# clipd

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  RELEASING.md  clipd-plan.md  config.example.toml
.github/workflows/: release.yml
src/: install.rs  main.rs
src/classify/: mod.rs
src/config/: mod.rs
src/daemon/: capture.rs  clipboard.rs  clipboard_format.rs  image.rs  mod.rs  picker_supervisor.rs  purge.rs  tray.rs  win_hook.rs
src/daemon/ipc/: mod.rs  picker_pipe.rs  server.rs
src/picker/: app.rs  mod.rs  query.rs
src/platform/: autostart.rs  keyring.rs  mod.rs
src/secrets/: mod.rs
src/store/: crypto.rs  mod.rs  schema.rs
