[package]
name = "clipd"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Brumbelow"]
description = "Local-first clipboard history manager for Windows 11"
license = "Apache-2.0"
repository = "https://github.com/Brumbelow/clipd"
readme = "README.md"
rust-version = "1.78"

[[bin]]
name = "clipd"
path = "src/main.rs"

[dependencies]
# ---- Win32 ----
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
] }
clipboard-win = "5"

# ---- Storage ----
rusqlite = { version = "0.32", features = ["bundled", "blob", "chrono"] }

# ---- Search ----
nucleo = "0.5"

# ---- Hashing + crypto ----
blake3 = "1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# ---- Image (Step 8) ----
# DIB→PNG encode + thumbnail resize. `image` and `png` are already transitive
# deps via eframe (in Cargo.lock), so promoting to direct deps with explicit
# features is binary-cost-neutral. `default-features = false` documents that
# we only need PNG; eframe may enable more transitively.
image = { version = "0.25", default-features = false, features = ["png"] }

# ---- IPC (Windows named pipes via interprocess) ----
interprocess = "2"

# ---- Serde + config ----
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ---- CLI ----
clap = { version = "4", features = ["derive"] }

# ---- Picker UI ----
# `glow` (OpenGL ES 3.0 via the glow crate) is preferred over `wgpu` for cold-
# start latency: wgpu's adapter enumeration adds ~50–100ms before first frame.
# See Step 6.5 in clipd-plan.md.
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"

# ---- Utility ----
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
once_cell = "1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
